--- a/index.html
+++ b/index.html
@@ -8,18 +8,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-      <div class="header">
-          <div class="header-logo">
-           Header Logo
-          </div>
-          <div class="right-links">
+  <div class="hero">
+    <nav class="navigation">
+          <a href="#" class="header-logo" >
+            Header Logo
+          </a>
+          <div class="nav-item">
               <ul>
-                  <li><a href="link.one">header link one</a></li>
-                  <li><a href="link.two">header link two</a></li>
-                  <li><a href="link.three">header link three</a></li>
+                  <li><a href="#" class="nav-link">header link one</a></li>
+                  <li><a href="#" class="nav-link">header link two</a></li>
+                  <li><a href="#" class="nav-link">header link three</a></li>
               </ul>
           </div>
+    </nav>
+    <div class="container">
+      <div class="text">
+        <h1>This website is</br>awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <span><a class="cta-btn" href="#">Sign up</a></span>
+      </div>
+      <div class="img-placeholder">
+        this is a placeholder for an image
       </div>
     </div>
+  </div>
 </body>
