--- a/index.html
+++ b/index.html
@@ -25,11 +25,33 @@
       <div class="text">
         <h1>This website is</br>awesome</h1>
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <span><a class="cta-btn" href="#">Sign up</a></span>
+        <div><a class="cta-btn" href="#">Sign up</a></div>
       </div>
       <div class="img-placeholder">
         this is a placeholder for an image
       </div>
     </div>
+  </div>
+  <div id="information">
+    <h2>Some random information.</h2>
+  <div class="info">
+    <div>
+      <div class="some-class"></div>
+      <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div>
+      <div class="some-class"></div>
+      <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div>
+      <div class="some-class"></div>
+      <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+    <div>
+      <div class="some-class"></div>
+      <p class="subtext">this is some subtext under an illustration or image</p>
+    </div>
+  </div>
+  </div>
   </div>
 </body>
