--- a/index.html
+++ b/index.html
@@ -57,4 +57,9 @@
     <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
     <div class="author">-Thor, God of Thunder</div>
   </div>
+  <div class="call-action">
+    <div class="action"><h2>Call to action! It's time!</h2>
+      <p>Sign up for our product by clicking that button right over there!</p></div>
+    <div class="sign-up"><a href="#">Sign up</a></div>
+  </div>
 </body>
