--- a/index.html
+++ b/index.html
@@ -62,4 +62,7 @@
       <p>Sign up for our product by clicking that button right over there!</p></div>
     <div class="sign-up"><a href="#">Sign up</a></div>
   </div>
+  <div class="footer">
+    <div>Copyright &nbsp; &copy &nbsp; The Odin Project 2022</div>
+  </div>
 </body>
